--- a/News/app/build.gradle
+++ b/News/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.4.1"
 
 
-
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'com.android.databinding:compiler:3.5.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -75,5 +75,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'com.github.KwabenBerko:News-API-Java:1.0.0'
+    implementation 'jp.wasabeef:picasso-transformations:2.1.0'
 
 }
