--- a/News/app/build.gradle
+++ b/News/app/build.gradle
@@ -35,6 +35,7 @@ android {
         exclude 'META-INF/*.properties'
         exclude 'META-INF/AL2.0'
         exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/DEPENDENCIES'
     }
 
 
@@ -48,6 +49,8 @@ dependencies {
 
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.5.2'
     def room_version = '2.4.1'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:2.4.1"
@@ -72,9 +75,9 @@ dependencies {
     // Annotation processor
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation 'com.google.android.material:material:1.6.0-alpha01'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.facebook.fresco:fresco:2.6.0'
 
     implementation 'com.github.KwabenBerko:News-API-Java:1.0.0'
-    implementation 'jp.wasabeef:picasso-transformations:2.1.0'
+
 
 }
